# orca-recipes

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  airflow_password.sh  challenge_dag_factory.py  connections.yaml.example  dev_setup.sh  docker-compose.yaml  install_local_airflow.sh  pytest.ini  requirements-airflow.txt  requirements-dev.txt  requirements-local-airflow.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
archived_dags/: cavatica-launch-poc-v2.py  dynamic-challenge-dag.py  htan-nf_dcqc_dag.py  nf-hello-test.py  tower_metrics_dag.py
config/: airflow.cfg
dags/: agora_nf.py  als-kp-dataset-dag-v2.py  als-kp-dataset-dag.py  als-kp-dataset-dag_script.py  cavatica-launch-poc-v2.py  cavatica-launch-poc.py  challenge-submission-dag.py  challenge_configs.yaml  challenge_dag_factory.py  conn_testing.py  dcqc-poc-dag.py  doi-to-datacatalog-dag.py  dynamic-challenge-dag.py  egress-domain-report-dag.py  genie-ingestion-dag.py  genie-nf-validate.py  grants_pipeline_dag.py  htan-nf_dcqc_dag.py  htan-validate-dag.py  k8-top-public-synapse-projects-30-days-from-snowflake.py  nf-dynamic-challenge-dag.py  nf-hello-test.py  nf-validate-test.py  olfactory-challenge-submission-dag.py  pegs-challenge-submission-dag.py  poc-snapshots-to-snowflake-dag.py  portal-data-to-snowflake-dag.py  record_types.yaml  synapse-by-the-numbers-dag.py  synapse-dataset-to-croissant.py  synapse-datasets-created-7-days.py  (+19 more)
src/snowflake_utils/: README.md  __init__.py  pyproject.toml  snowflake_utils.py
(+138 files in other folders)
